Waybar: Fix 1 pixel gap

--- a/waybar.css
+++ b/waybar.css
@@ -2,7 +2,7 @@
   border: none;
   border-radius: 0;
   font-size: 13px;
-  min-height: 0;
+  min-height: 18px;
   padding: 0;
 }
 
